# FSR_PROJECT

./: PLOT_FSR.m  README.md  frames_2025-07-13_17.18.48.gv  plot_arm.m  plot_project.m
Universal_Robots_ROS2_Description/urdf/: ur_macro.xacro
Universal_Robots_ROS2_Description/urdf/inc/: ur_transmissions.xacro
planner/: CMakeLists.txt  package.xml
planner/src/: planner_cart.py  planner_circ.py  planner_lin.py  ros2_node.cpp  trajectory_cart.csv  trajectory_cart_straight.csv  trajectory_circ.csv
rbvogui_description/: CMakeLists.txt  package.xml
rbvogui_description/config/: localization.yaml  mapping.yaml  robot_ackermann_control.yaml
rbvogui_description/launch/: gazebo_rbvogui.launch.py
rbvogui_description/maps/: mappa_bruno.pgm  mappa_bruno.yaml
rbvogui_description/models/arucotag/: model.sdf
rbvogui_description/robots/: lidar_gazebo_macro.xacro  rbvogui_std.urdf.xacro
rbvogui_description/src/: odom_bl_tf.cpp
rbvogui_description/urdf/bases/: rbvogui_base.gazebo.xacro  rbvogui_base.urdf.xacro
rbvogui_description/urdf/camera/: camera.urdf.xacro
rbvogui_description/urdf/wheels/: fixed_wheel.urdf.xacro  motor_wheel.urdf.xacro  rubber_wheel.urdf.xacro
rbvogui_description/worlds/: leonardo_race_field.sdf
ros2_docker_scripts-fortress/: Dockerfile  docker_run_container.sh
ros2_kdl_package/: CMakeLists.txt
ros2_kdl_package/include/: kdl_robot.h
ros2_kdl_package/src/: kdl_robot.cpp
ros2_vision/aruco_ros/aruco_ros/src/: simple_single.cpp
